@startuml database-schema
!theme plain
skin backgroundColor #0a0a0a
skin defaultFontColor #ededed
skin defaultFontSize 12
skinparam linetype ortho

skinparam entity {
  BackgroundColor #171717
  BorderColor #333333
  FontColor #ededed
  RoundCorner 8
  StereotypeFontSize 0
  HeaderBackgroundColor #111111
}

skinparam arrow {
  Color #0070f3
}

title **Evoflux — Database Schema (SQLite)**\n

entity "settings" as settings {
  * key : TEXT <<PK>>
  --
  value : TEXT
  updated_at : INTEGER
}

entity "providers" as providers {
  * id : TEXT <<PK>>
  --
  name : TEXT
  type : TEXT
  api_key : TEXT
  base_url : TEXT
  default_model : TEXT
  models_json : TEXT
  is_default : INTEGER
  created_at : INTEGER
  updated_at : INTEGER
}

entity "workflows" as workflows {
  * id : TEXT <<PK>>
  --
  name : TEXT
  description : TEXT
  nodes_json : TEXT
  edges_json : TEXT
  created_at : INTEGER
  updated_at : INTEGER
}

entity "runs" as runs {
  * id : TEXT <<PK>>
  --
  workflow_id : TEXT <<FK>>
  status : TEXT
  input_json : TEXT
  output_json : TEXT
  started_at : INTEGER
  finished_at : INTEGER
}

entity "node_runs" as node_runs {
  * id : TEXT <<PK>>
  --
  run_id : TEXT <<FK>>
  node_id : TEXT
  node_type : TEXT
  status : TEXT
  input_json : TEXT
  output_json : TEXT
  error : TEXT
  started_at : INTEGER
  finished_at : INTEGER
}

entity "memory_semantic" as mem_sem {
  * id : TEXT <<PK>>
  --
  workflow_id : TEXT <<FK>>
  type : TEXT
  content : TEXT
  embedding : BLOB
  metadata_json : TEXT
  created_at : INTEGER
  access_count : INTEGER
}

entity "memory_episodic" as mem_epi {
  * id : TEXT <<PK>>
  --
  workflow_id : TEXT <<FK>>
  run_id : TEXT <<FK>>
  task_description : TEXT
  trajectory_json : TEXT
  outcome : TEXT
  feedback : TEXT
  embedding : BLOB
  created_at : INTEGER
}

entity "memory_procedural" as mem_proc {
  * id : TEXT <<PK>>
  --
  workflow_id : TEXT <<FK>>
  name : TEXT
  description : TEXT
  pattern : TEXT
  source_episodes_json : TEXT
  usage_count : INTEGER
  success_rate : REAL
  maturity_score : REAL
  embedding : BLOB
  created_at : INTEGER
  last_used_at : INTEGER
}

entity "memory_edges" as mem_edges {
  * id : TEXT <<PK>>
  --
  workflow_id : TEXT <<FK>>
  source_id : TEXT
  target_id : TEXT
  type : TEXT
  weight : REAL
  created_at : INTEGER
}

entity "env_variables" as env_vars {
  * id : TEXT <<PK>>
  --
  workflow_id : TEXT <<FK>>
  key : TEXT
  value : TEXT
  is_secret : INTEGER
}

entity "schema_version" as schema_ver {
  * version : INTEGER
}

' Relationships
workflows ||--o{ runs : "1:N"
runs ||--o{ node_runs : "1:N"
workflows ||--o{ mem_sem : "1:N"
workflows ||--o{ mem_epi : "1:N"
workflows ||--o{ mem_proc : "1:N"
workflows ||--o{ mem_edges : "1:N"
workflows ||--o{ env_vars : "1:N"
runs ||--o{ mem_epi : "1:N"

@enduml
